[tool.poetry]
name = "seer"
version = "0.1.0"
description = ""
authors = ["terminaldweller <thabogre@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
keras = "^2.9.0"
tensorflow = "^2.9.1"
pandas = "^1.4.3"
scipy = "^1.8.1"
matplotlib = "^3.5.2"
numba = "^0.55.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
